--- a/app/css/generator-styling.css
+++ b/app/css/generator-styling.css
@@ -1,30 +1,7 @@
-@font-face{
-    font-family: myFont1;
-    src:url(Disket-Mono-Bold.ttf);
-}
-
-@font-face{
-    font-family: myFont2;
-    src:url(Disket-Mono-Regular.ttf);
-}
-
-
-html{
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-    padding: 0;
-    margin: 0;
-    min-height: 100%;
-}
-
 body{
-    background-color: black;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
-
 
 .container-content{
     display: flex;
@@ -178,7 +155,7 @@ h1{
     width: 150px;
     height: 150px;
     aspect-ratio: 1;
-    background: var(--currentColor, aqua);
+    background: var(--current-color, aqua);
     border-radius: 50%;
     margin-right: -20px; /* Adjust the negative margin to control the overlap */
 
