did a bit of refactoring on the app

--- a/app/css/global.css
+++ b/app/css/global.css
@@ -37,7 +37,7 @@ body {
     height: 80px;
 
     /* position the nav at the bottom of the page */
-    position: absolute;
+    position: fixed;
     bottom: 50px;
     left: 50%;
     transform: translateX(-50%);
