--- a/app/css/generator-styling.css
+++ b/app/css/generator-styling.css
@@ -1,6 +1,13 @@
-body{
+body {
     display: flex;
     justify-content: center;
+    height: 100vh; /* Full viewport height */
+    margin: 0;
+}
+
+
+.container {
+  width: 100%;
 }
 
 .container-content{
@@ -10,7 +17,7 @@ body{
     justify-content: center;
     text-align: center;
     margin: 0;
-    margin-top: 5vmin;
+    margin-top: 10vmin;
     color: white;
 }
 
@@ -27,9 +34,11 @@ body{
     color: white
 } */
 
-h1{
+h1 {
     font-family: myFont1;
-    font-size: 48px;
+    font-size: 28px;
+    width: auto;
+    margin-bottom: 50px;
 }
 
 
@@ -158,6 +167,8 @@ h1{
     background: var(--current-color, aqua);
     border-radius: 50%;
     margin-right: -20px; /* Adjust the negative margin to control the overlap */
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+
 
 
     /* box-shadow: 0 0 0 .5vmin var(--background); */
@@ -165,7 +176,7 @@ h1{
   
   .color-sample__value {
     display: block;
-    font-size: 1.5vmin;
+    font-size: 10px;
     font-family: myFont2;
     text-align: center;
     width: 8vmin;
@@ -204,3 +215,60 @@ h1{
     background-color: #E72D2D;
 } */
 
+/* Media query for iPhones and other small screens */
+@media screen and (max-width: 768px) {
+
+  body {
+    display: flex;
+    justify-content: center;
+    height: 100vh; /* Full viewport height */
+    margin: 0;
+}
+
+  /* palette title */
+  h1 {
+    font-family: myFont1;
+    font-size: 28px;
+    margin-bottom: 50px;
+}
+  
+  .container-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0;
+    margin-top: 10vmin;
+    color: white;
+}
+
+  .color-sample__swatch {
+    display: block;
+    width: 110px;
+    height: 110px;
+    aspect-ratio: 1;
+    background: var(--current-color, aqua);
+    border-radius: 50%;
+    margin-right: -20px; /* Adjust the negative margin to control the overlap */
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+
+
+    /* box-shadow: 0 0 0 .5vmin var(--background); */
+  }
+
+  .color-sample__value {
+    display: block;
+    font-size: 8px;
+    font-family: myFont2;
+    text-align: center;
+    width: 8vmin;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    margin-top: 20px;
+    margin-left: 35px;
+    
+
+  }
+
+
+}
