--- a/app/css/generator-styling.css
+++ b/app/css/generator-styling.css
@@ -7,20 +7,25 @@ body {
 
 
 .container {
-  width: 100%;
+  justify-content: center;
 }
 
-.container-content{
+
+ .container-content{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
-    margin: 0;
     margin-top: 10vmin;
     color: white;
-}
+} 
 
+h1 {
+  font-family: myFont1;
+  font-size: 28px;
+  margin-bottom: 50px;
+  text-align: center;
+}
 
 /* .container-content{
     display: block;
@@ -34,12 +39,7 @@ body {
     color: white
 } */
 
-h1 {
-    font-family: myFont1;
-    font-size: 28px;
-    width: auto;
-    margin-bottom: 50px;
-}
+
 
 
 /* V2 LIKES -- HEART BUTTON */
