mobile responsiveness for likes, modal text edits

--- a/app/css/likes-styling.css
+++ b/app/css/likes-styling.css
@@ -117,12 +117,21 @@ background-color: #BC2020;
   .liked-palettes {
     padding: 0 20px;
     padding-top: 20px;
+    max-height: 380px;
+    overflow-y: auto;
+    /* Add padding at the bottom to avoid overlap with the navigation bar */
+    margin-top: 30px;
+    justify-content: center;
+    align-items: center;
 
   }
 
+  
   .liked-palettes__wrapper {
     grid-template-columns: 1fr; /* Change to single column layout */
     gap: 20px; /* Adjust the gap between items as needed */
+
+
   }
 
   .likeButton__container {
