--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -47,7 +47,7 @@ h3, p{
    
 }
 
-p{
+p {
     margin-top: 4px;
 }
 
@@ -174,9 +174,15 @@ h6{
     right: 10px;
     font-size: 24px;
     border: none;
+    border-radius: 5px;
     outline: none;
     cursor: pointer;
     color: #101010;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer; /* Add cursor pointer for better UX */
+    line-height: 1; /* Ensure text is vertically centered */
     
   }
   
@@ -220,9 +226,124 @@ h6{
 
   /* Media query for iPhones and other small screens */
 @media screen and (max-width: 768px) {
+  
+  body {
+    overflow: hidden;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+  }
+  
+
+  .hero-container {
+    height: 100%;
+    padding: 20px;
+    margin-top: 70px;
+  }
+
+  .button-container{
+    margin-top: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column; 
+    gap: 12px;
+  }
+
+  .create-btn {
+    margin-top: 0;
+  }
+
+  .login-btn {
+    margin: 0;
+
+  }
 
 
+  h6 {
+    font-size: 12px;
+    margin-top: 50px;
+  }
 
+  h1 {
+    font-size: 100px;
+  }
+
+  h3, p {
+    font-size: 16px;
+  }
+
+  /* modal design for mobile */
+
+  
+.modal{
+  padding: 1em;
+  max-width: 50ch;
+  width: 90%; /* Adjust the width to your desired value */
+  height: 60vh; /* Adjust the height to your desired value */
+  border: 0;
+  box-shadow: 0 0 1em rgb(0 0 0 /.3);
+}
+
+
+.modal {
+  text-align: center;
+  border-radius: 10px;
+}
+
+.modal::backdrop {
+  background: rgb(0 0 0 / .8);
+}
+  
+
+  .modal .close-btn{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    color: #101010;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1; /* Ensure text is vertically centered */
+    width: 15px; /* Adjust the width to your desired value */
+    height: 30px; /* Adjust the height to your desired value */
+    
+  }
+  
+
+  .popup-h1{
+    margin-top: 40px;
+    font-family: myFont1;
+    font-weight: bold;
+    font-size: 44px;
+  }
+  
+
+  .popup-h2{
+    font-family: myFont1;
+    font-weight: bold;
+    font-size: 18px;
+    margin-top: 16px;
+  }
+  
+  .popup-p{
+    font-family: myFont2;
+    font-weight: lighter;
+    font-size: 12px;
+    margin-top: 16px;
+    line-height: 1.5; /* Adjust this value as needed */
+
+  }
+  
+  .google-login-btn{
+    margin-top: 25px;
+  }
+ 
 }
 
 
