--- a/app/css/generator-styling.css
+++ b/app/css/generator-styling.css
@@ -16,7 +16,9 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 10vmin;
+    /* margin-top: 10vmin; */
+    margin-top: 4rem;
+
     color: white;
 } 
 
@@ -233,6 +235,7 @@ h1 {
     font-size: 28px;
     margin-bottom: 50px;
     width: fit-content; /* not sure if this is good */
+    overflow: wrap;
 }
   
   .container-content{
