--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -41,14 +41,17 @@ body{
 
 h3, p{
     font-family: myFont2;
-    font-size: 20px;
+    /* font-size: 20px; */
+    font-size: 1.25rem;
     font-weight: normal;
-    margin-bottom: 4px;
+    /* margin-bottom: 4px; */
+    margin-bottom: 0.25rem;
+
    
 }
 
 p {
-    margin-top: 4px;
+    margin-top: 0.25rem;
 }
 
 
@@ -58,7 +61,8 @@ p {
 
 h1{
     font-family: myFont1;
-    font-size: 140px;
+    /* font-size: 140px; */
+    font-size: 8.75rem;
     margin: 0;
 
     /* GRADIENT ANIMATION */
@@ -90,9 +94,12 @@ h1{
 
 h6{
     font-family: myFont2;
-    font-size: 16px;
+    /* font-size: 16px; */
+    font-size: 1rem;
     font-weight: normal;
-    margin-top: 10px;
+    /* margin-top: 10px; */
+    margin-top: 0.625rem;
+
 }
 
 .create-btn{
@@ -100,12 +107,14 @@ h6{
     background-color: #6FC3F7;
     border: none;
     color: black;
-    padding: 18px 30px;
+    /* padding: 18px 30px; */
+    padding: 1.125rem 1.875rem;
+
     border-radius: 8px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1rem;
     margin-top: 53px;
     transition-duration: 0.3s;
     border: 2px solid #97B9F7;
@@ -120,7 +129,8 @@ h6{
 }
 
 .login-btn{
-    margin-left: 16px;
+    margin-left: 1rem;
+    /* margin-left: 16px; */
     font-family: myFont1;
     background-color: black;
     border: none;
@@ -131,7 +141,8 @@ h6{
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    /* font-size: 16px; */
+    font-size: 1rem;
     margin-bottom: 53px;
     cursor: pointer; /* Add this line to set the cursor to a pointer */
 
