--- a/app/css/generator-styling.css
+++ b/app/css/generator-styling.css
@@ -16,8 +16,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* margin-top: 10vmin; */
-    margin-top: 4rem;
+    margin-top: 10vmin;
 
     color: white;
 } 
